[package]
name = "rusterizer"
version = "0.1.0"
authors = ["dzharvis <dzharvis@gmail.com>"]
edition = "2018"

[features]
default = ["yew", "wasm-bindgen", "anyhow"]
local = []

[dependencies]
wasm-bindgen = {version = "0.2", optional = true }
yew = {version = "0.18.0", optional = true}
anyhow = {version="1.0", optional = true}

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
  "Document",
  "DomTokenList",
  "Element",
  "HtmlCanvasElement",
  "Node",
  "Window"
]